spec: Fix merge conflict

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -464,19 +464,19 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 \teststep{Das Programm wird ausgeführt und ist fokussiert. Im Editor wurde ein Prolog-Programm von Hand eingegeben.}
 {Der Nutzer wählt über die Menüleiste die Öffnen-Funktion aus.}
-{Ein Info-Dialog öffnet sich. Und fragt den Nutzer, ob das im Editor eingegebene Prolog-Programm gespeichert oder verworfen werden soll.}
+{Ein Info-Dialog öffnet sich und fragt den Nutzer, ob das im Editor eingegebene Prolog-Programm gespeichert oder verworfen werden soll.}
 
 \teststep{Der Nutzer hat die Wahl das im Editor geschriebene Prolog-Programm zu speichern oder zu verwerfen.}
 {Der Nutzer betätigt die Speichern-Schaltfläche des Info-Dialogs.}
 {Der Info-Dialog schließt sich und ein Datei-Speichern-Dialog öffnet sich.}
 
 \teststep{Ein Datei-Speichern-Dialog ist geöffnet.}
-{Der Nutzer wählt einen Speicherort und wählt einen Dateinamen. Anschließend betätigt er die Speichern-Schaltfläche des Datei-Speichern-Dialogs.}
+{Der Nutzer wählt einen Speicherort und einen Dateinamen. Anschließend betätigt er die Speichern-Schaltfläche des Datei-Speichern-Dialogs.}
 {Der Datei-Speichern-Dialog schließt sich. Ein Datei-Auswahl-Dialog öffnet sich.}
 
 \teststep{Der Nutzer hat eine Datei über den Datei-Auswahl-Dialog ausgewählt.}
 {Der Nutzer betätigt die Öffnen-Schaltfläche des Datei-Auswahl-Dialogs.}
-{Der Datei-Auswahl-Dialog schließt sich.Das im Editor geöffnete Prolog-Programm wird in die gewählte Datei gespeichert. Die zu öffnende Datei wird in den Editor geladen und überschreibt den bisherigen Inhalt.}
+{Der Datei-Auswahl-Dialog schließt sich. Die zu öffnende Datei wird in den Editor geladen und überschreibt den bisherigen Inhalt.}
 
 \test{Öffnen einer Prolog-Programmdatei und Verwerfen von vorhandenem Editor-Inhalt}{tst:openanother2}
 \tests{fnc:open}
